add troubleshoot